discussion/kv_engine/184761/184761_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit '4b020c3d4' into master

* commit '4b020c3d4':
  MB-54776: Don't return $XTOC=null

Change-Id: I7b6b28b66c342f3f9f430db7f0627c3a48ddcaab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-10 22:21:29.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-10 22:37:09.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22409/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_xattr.cc:2236:5: error: no matching member function for call to "setBodyAndXattr" [clang-diagnostic-error]
    setBodyAndXattr(conn, value, {{sysXattr, xattrVal}});
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_client_test.h:127:10: note: candidate function not viable: no known conversion from "MemcachedConnection" to "const std::string" (aka "const basic_string<char>") for 1st argument
    void setBodyAndXattr(
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_client_test.h:140:10: note: candidate function not viable: requires 2 arguments, but 3 were provided
    void setBodyAndXattr(
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22409/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_xattr.cc:2236:5:
error: no matching member function for call to "setBodyAndXattr" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22409/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51755/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_xattr.cc(2236): error C2664: "void TestappXattrClientTest::setBodyAndXattr(const std::string &,std::initializer_list<std::pair<const _Kty,_Ty>>)": cannot convert argument 1 from "MemcachedConnection" to "const std::string &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51755/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1174/ : FAILURE

Compile error at [2023-01-10T22:26:05.835Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/tests/testapp/testapp_xattr.cc:2236:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1174/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12130/ : FAILURE

Compile error at [2023-01-10T22:29:36.805Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp/testapp_xattr.cc:2236:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12130/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24453/ : FAILURE

Compile error at [2023-01-10T22:26:38.150Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_xattr.cc:2236:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24453/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24880/ : FAILURE

Compile error at [2023-01-10T22:28:47.833Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2236:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24880/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25743/ : FAILURE

Compile error at [2023-01-10T22:25:24.332Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_xattr.cc:2236:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25743/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23984/ : FAILURE

Compile error at [2023-01-10T22:33:51.846Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/tests/testapp/testapp_xattr.cc:2236:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23984/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32874/ : FAILURE

Compile error at [2023-01-10T22:36:46.875Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_xattr.cc:2236:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32874/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12217/ : FAILURE

Compile error at [2023-01-10T22:32:20.269Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_xattr.cc:2236:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12217/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22070/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43446/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-11 08:16:38.000000000
Message: 
Removed reviewer <GERRIT_ACCOUNT_1000966>.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-11 08:16:40.000000000
Message: 
Removed reviewer <GERRIT_ACCOUNT_1001546>.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-11 08:16:42.000000000
Message: 
Removed reviewer <GERRIT_ACCOUNT_1001547>.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-11 08:16:44.000000000
Message: 
Removed reviewer <GERRIT_ACCOUNT_1002319>.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-11 08:16:45.000000000
Message: 
Removed reviewer <GERRIT_ACCOUNT_1003828>.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-11 08:16:46.000000000
Message: 
Removed reviewer <GERRIT_ACCOUNT_1004059>.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-11 08:16:48.000000000
Message: 
Removed reviewer <GERRIT_ACCOUNT_1004341>.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-11 08:16:50.000000000
Message: 
Removed reviewer <GERRIT_ACCOUNT_1004368>.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-11 08:16:52.000000000
Message: 
Removed reviewer <GERRIT_ACCOUNT_1004964>.
----------------------------------------------------------------------------------------------------------------------
